awfm-396: Fix spacing.

--- a/web/themes/custom/awf/src/sass/styles/_layouts.scss
+++ b/web/themes/custom/awf/src/sass/styles/_layouts.scss
@@ -70,6 +70,7 @@
 
     @include breakpoint($min760) {
       max-width: 220px;
+      margin-left: 2rem;
     }
 
     >div {
